--- a/bmobsdk/src/main/res/values/strings.xml
+++ b/bmobsdk/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">bmobsdk</string>
+    <string name="appid">31b692ca8ff5535b17d19fd2e8445d47</string>
 </resources>
