--- a/myolq/src/main/res/values/strings.xml
+++ b/myolq/src/main/res/values/strings.xml
@@ -8,11 +8,14 @@
     <string name="title_activity_login">登录</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">请输入用户名</string>
+    <string name="prompt_username">请输入用户名</string>
     <string name="prompt_password">请输入密码</string>
     <string name="prompt_password1">请再次输入密码</string>
-    <string name="prompt_username">请输入昵称</string>
+    <string name="prompt_nickname">请输入昵称</string>
     <string name="prompt_mobile">请输入手机号码</string>
+    <string name="prompt_email">请输入邮箱地址</string>
+    <string name="prompt_age">请输入您的年龄</string>
+
 
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -25,6 +28,8 @@
     </string>
     <string name="title_activity_home_page">首页</string>
     <string name="title_activity_register">注册</string>
-
+    <string name="title_activity_forgetpass">忘记密码?</string>
     <string name="register_succeed">注册成功</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_a">AActivit</string>
 </resources>
