--- a/myolq/src/main/res/values/strings.xml
+++ b/myolq/src/main/res/values/strings.xml
@@ -35,4 +35,28 @@
     <string name="title_activity_addition">AdditionActivity</string>
     <string name="title_activity_user_info">UserInfoActivityActivity</string>
     <string name="title_activity_chat">ChatActivity</string>
+
+    <string name="voice_up_tips">手指上滑,取消发送</string>
+    <string name="voice_cancel_tips">松开手指，取消发送</string>
+    <string name="voice_seconds_tips">还可以说%1$s秒</string>
+    <string name="voice_short_tips">录音时间太短</string>
+    <string name="agree">接受</string>
+    <string name="new_friend">新的朋友</string>
+
+    <string name="chat">聊天</string>
+    <string name="add_friend">添加好友</string>
+
+    <string name="set_notify">接收新消息通知</string>
+    <string name="set_myinfo">个人资料</string>
+    <string name="set_blacklist">黑名单</string>
+    <string name="set_voice">声音</string>
+    <string name="set_vibrate">震动</string>
+    <string name="logout">退出登陆</string>
+
+    <string name="longclick_speak">长按说话</string>
+    <string name="picture">照片</string>
+    <string name="camera">拍摄</string>
+    <string name="location">位置</string>
+    <string name="title_activity_new_friend">NewFriendActivity</string>
+
 </resources>
